--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -369,6 +369,16 @@
   "summary_view_role": "Roles & Permissions Overview",
   "dashboard_description_role": "Manage roles and permissions for different users. Create, edit, and assign roles to control access and permissions within the system.",
   "summary_view_user": "User Management Overview",
-"dashboard_description_user": "Manage users, including account information such as location, contact info, and other details. Add, edit, and update information to ensure proper management and communication."
+"dashboard_description_user": "Manage users, including account information such as location, contact info, and other details. Add, edit, and update information to ensure proper management and communication.",
 
+"birth_gender_distribution": "Gender Distribution in Birth",
+  "death_gender_distribution": "Gender Distribution in Death",
+  "death_registrations_by_gender": "Death Registrations by Gender",
+  "conclusion": "Conclusion",
+  "birth_conclusion_more_male": "More Male Births",
+  "birth_conclusion_more_female": "More Female Births",
+  "birth_conclusion_equal": "Equal Male and Female Births",
+  "death_conclusion_more_male": "More Male Deaths",
+  "death_conclusion_more_female": "More Female Deaths",
+  "death_conclusion_equal": "Equal Male and Female Deaths"
 }
