fixing user selection

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -130,7 +130,7 @@
   "uploadedOn": "Uploaded on",
   "exportDocument": "Export Document",
   "noDocumentFound": "No Document Found",
-  "issueCertificate": "Issue Certificate",
+  "issueCertificateAno": "Issue Annotation",
   "delete": "Delete",
   "deleting": "Deleting...",
   "death": "Death",
