--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -130,7 +130,7 @@
   "uploadedOn": "Na-upload noong",
   "exportDocument": "Mag-export ng Dokumento",
   "noDocumentFound": "Walang nahanap na dokumento",
-  "issueCertificate": "Mag-isyu ng Sertipiko",
+  "issueCertificateAno": "Mag-isyu ng Anotasyon",
   "delete": "Tanggalin",
   "death": "Kamatayan",
   "marriage": "Kasal",
