--- a/src/translation/fil.json
+++ b/src/translation/fil.json
@@ -11,7 +11,7 @@
     "fetch_error": "Nabigo na makuha ang data ng metrics"
   },
   "greeting": {
-    "morning": "Magandang umage",
+    "morning": "Magandang umaga",
     "afternoon": "Magandang hapon",
     "evening": "Magandang gabi"
   },
@@ -147,16 +147,6 @@
     "registryNo": "Numero ng Rehistro",
     "status": "Katayuan"
   },
-  "datatable": {
-    "selected_rows": "{{selected}} ng {{total}} na hilera ang napili.",
-    "no_rows_selected": "Walang napiling hilera.",
-    "rows_per_page": "Mga hilera bawat pahina",
-    "page_info": "Pahina {{current}} ng {{total}}",
-    "go_to_first_page": "Pumunta sa unang pahina",
-    "go_to_previous_page": "Pumunta sa nakaraang pahina",
-    "go_to_next_page": "Pumunta sa susunod na pahina",
-    "go_to_last_page": "Pumunta sa huling pahina"
-  },
   "User": "Gumagamit",
   "user": "gumagamit",
   "Feedback": "Puna",
@@ -246,15 +236,23 @@
     "noPermissions": "Walang mga Pahintulot",
     "status": "Status",
     "activity": "Aktibidad",
-    "verified": "Naka-verify",
-    "unverified": "Hindi naka-verify",
+    "verified": "Naka-enabled",
+    "unverified": "Hindi naka-enabled",
     "created": "Nilikha",
     "updated": "Na-update",
     "morePermissions": "+{{count}} pang mga pahintulot",
     "allPermissions": "Lahat ng mga Pahintulot",
     "username": "Pangalan ng gumagamit",
     "id": "ID",
-    "no_username": "Walang username"
+    "no_username": "Walang username",
+    "selected_rows": "{{selected}} ng {{total}} na hilera ang napili.",
+    "no_rows_selected": "Walang napiling hilera.",
+    "rows_per_page": "Mga hilera bawat pahina",
+    "page_info": "Pahina {{current}} ng {{total}}",
+    "go_to_first_page": "Pumunta sa unang pahina",
+    "go_to_previous_page": "Pumunta sa nakaraang pahina",
+    "go_to_next_page": "Pumunta sa susunod na pahina",
+    "go_to_last_page": "Pumunta sa huling pahina"
   },
   "formSelection": {
     "issueCertificate": "Mag-isyu ng Sertipiko",
