--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -132,6 +132,7 @@
   "exportDocument": "Export Document",
   "noDocumentFound": "No Document Found",
   "issueCertificateAno": "Issue Annotation",
+  "issueCtc": "Issue Annotation",
   "delete": "Delete",
   "deleting": "Deleting...",
   "death": "Death",
